@@ -1,3 +1,7 @@
+2023-02-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* hanzi.h: Update references.
+
 2022-11-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version 1.07  Stable version.
